--- a/MusicApp/app/src/main/res/layout/activity_search.xml
+++ b/MusicApp/app/src/main/res/layout/activity_search.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <SearchView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:queryHint="@string/txt_search_hint"
         >
-
     </SearchView>
 
-    <include layout="@layout/activity_base_list_items"></include>
-
+    <include layout="@layout/base_list_items"></include>
 
 </LinearLayout>
