--- a/MusicApp/app/src/main/res/layout/base_list_items.xml
+++ b/MusicApp/app/src/main/res/layout/base_list_items.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <TextView
+        android:id="@+id/tvDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/text_description_padding"
+        />
+    
     <ListView
         android:id="@+id/lvListView"
         android:layout_width="match_parent"
